--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "cross-env PORT=3000 react-scripts start",
+    "start": "node ./server",
+    "start:react": "cross-env PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node-env-run server --exec nodemon",
-    "dev": "run-p server start"
+    "dev": "run-p server start:react"
   },
   "eslintConfig": {
     "extends": [
